--- a/src/websocket/index.html
+++ b/src/websocket/index.html
@@ -1,63 +1,102 @@
 <html>
-    <head>
-    <script type="application/javascript">
-    function start() {
-        initWebsocket();
-    }
-    var wsUri = "ws://" + window.location.hostname + ":12345";
-    var websocket = null;
+	<head>
+		<title>Websocket client test</title>
+	</head>
+	<body onload="initWebsocket()">
+		<p>
+			<button onClick="initWebsocket();">Connect</button>
+			<button onClick="stopWebsocket();">Disconnect</button>
+			<button onClick="checkSocket();">State</button>
+		</p>
+		<p>
+			<textarea id="debugTextArea" style="width:400px;height:200px;"></textarea>
+		</p>
+		<p>
+			<input type="text" id="inputPseudo" value="pseudo" />
+			<input type="text" id="inputText" onkeydown="if(event.keyCode==13)sendMessage();"/>
+			<button onClick="sendMessage();">Envoyer</button>
+		</p>
+		
+		<script type="text/javascript">
+			var debugTextArea = document.getElementById("debugTextArea");
+			function debug(message)
+			{
+				debugTextArea.value += message + "\n";
+				debugTextArea.scrollTop = debugTextArea.scrollHeight;
+			}
+			
+			function sendMessage()
+			{
+				var pseudo = document.getElementById("inputPseudo").value;
+				var msg = document.getElementById("inputText").value;
+				var strToSend = pseudo + ": " + msg;
+				if ( websocket != null )
+				{
+					document.getElementById("inputText").value = "";
+					websocket.send( strToSend );
+				}
+			}
+			
+			var wsUri = "ws://localhost:1234";
+			var websocket = null;
 
-    function debug(message)
-    {
-        debugTextArea.value += message + "\n";
-        debugTextArea.scrollTop = debugTextArea.scrollHeight;
-    }
-
-    //Sending message:
-    // websocket.send(str)
-
-    function receiveData(data) {
-    }
-
-    function initWebsocket()
-    {
-            try {
-                    if (typeof MozWebSocket == 'function')
-                            WebSocket = MozWebSocket;
-                    websocket = new WebSocket(wsUri);
-                    websocket.onopen = function (evt) {
-                        debug("Connected");
-                    };
-                    websocket.onclose = function (evt) {
-                        debug("Disconnected");
-                    };
-                    websocket.onmessage = function (evt) {
-                            debug("Got: " + evt.data);
-                            receiveData(evt.data);
-                    };
-                    websocket.onerror = function (evt) {
-                        debug("Connected");
-                    };
-            } catch (exception) {
-                debug("Error " + exception);
-            }
-            debug("WS url: " + wsUri);
-    }
-
-    function stopWebsocket()
-    {
-        if (websocket)
-        websocket.close();
-    }
-    </script>
-    </head>
-    <body onload="start();">
-    <div>
-        Place for canvas!
-        <canvas id="canvas"></canvas>
-        <p>
-            <textarea id="debug" style="width:400px;height:200px;"></textarea>
-        </p>
-    </div>
-    </body>
+			function initWebsocket()
+			{
+				try {
+					if (typeof MozWebSocket == 'function')
+						WebSocket = MozWebSocket;
+					websocket = new WebSocket(wsUri);
+					websocket.onopen = function (evt) {
+						debug("CONNECTED");
+					};
+					websocket.onclose = function (evt) {
+						debug("DISCONNECTED");
+					};
+					websocket.onmessage = function (evt) {
+						debug( evt.data );
+					};
+					websocket.onerror = function (evt) {
+						debug('ERROR: ' + evt.data);
+					};
+				} catch (exception) {
+					debug('ERROR: ' + exception);
+				}
+			}
+			
+			function stopWebsocket()
+			{
+				if (websocket)
+					websocket.close();
+			}
+			
+			function checkSocket()
+			{
+				if ( websocket != null ) {
+					var stateStr;
+					switch (websocket.readyState) {
+						case 0:
+						stateStr = "CONNECTING";
+						break;
+						case 1:
+						stateStr = "OPEN";
+						break;
+						case 2:
+						stateStr = "CLOSING";
+						break;
+						case 3:
+						stateStr = "CLOSED";
+						break;
+						default:
+						stateStr = "UNKNOW";
+						break;
+					}
+					debug("Websocket state = " + websocket.readyState + " ( " + stateStr + " )");
+				} else {
+					debug("Websocket is null");
+				}
+			}
+			
+			//initWebsocket();
+		</script>
+	</body>
 </html>
