--- a/src/websocket/index.html
+++ b/src/websocket/index.html
@@ -1,102 +1,198 @@
 <html>
-	<head>
-		<title>Websocket client test</title>
-	</head>
-	<body onload="initWebsocket()">
-		<p>
-			<button onClick="initWebsocket();">Connect</button>
-			<button onClick="stopWebsocket();">Disconnect</button>
-			<button onClick="checkSocket();">State</button>
-		</p>
-		<p>
-			<textarea id="debugTextArea" style="width:400px;height:200px;"></textarea>
-		</p>
-		<p>
-			<input type="text" id="inputPseudo" value="pseudo" />
-			<input type="text" id="inputText" onkeydown="if(event.keyCode==13)sendMessage();"/>
-			<button onClick="sendMessage();">Envoyer</button>
-		</p>
-		
-		<script type="text/javascript">
-			var debugTextArea = document.getElementById("debugTextArea");
-			function debug(message)
-			{
-				debugTextArea.value += message + "\n";
-				debugTextArea.scrollTop = debugTextArea.scrollHeight;
-			}
-			
-			function sendMessage()
-			{
-				var pseudo = document.getElementById("inputPseudo").value;
-				var msg = document.getElementById("inputText").value;
-				var strToSend = pseudo + ": " + msg;
-				if ( websocket != null )
-				{
-					document.getElementById("inputText").value = "";
-					websocket.send( strToSend );
-				}
-			}
-			
-			var wsUri = "ws://localhost:1234";
-			var websocket = null;
+  <head>
+    <title>
+      Websocket client test
+    </title>
+    <style type="text/css">
+		canvas { border: 1px solid black; }
+    </style>
+    <script type="text/javascript">
+	var debugTextArea = document.getElementById("debugTextArea");
+    var canvas = document.getElementById('main');
+    var ctx = canvas.getContext('2d');
+    var context = ctx;
+    var widgets = {}
 
-			function initWebsocket()
-			{
-				try {
-					if (typeof MozWebSocket == 'function')
-						WebSocket = MozWebSocket;
-					websocket = new WebSocket(wsUri);
-					websocket.onopen = function (evt) {
-						debug("CONNECTED");
-					};
-					websocket.onclose = function (evt) {
-						debug("DISCONNECTED");
-					};
-					websocket.onmessage = function (evt) {
-						debug( evt.data );
-					};
-					websocket.onerror = function (evt) {
-						debug('ERROR: ' + evt.data);
-					};
-				} catch (exception) {
-					debug('ERROR: ' + exception);
-				}
-			}
-			
-			function stopWebsocket()
-			{
-				if (websocket)
-					websocket.close();
-			}
-			
-			function checkSocket()
-			{
-				if ( websocket != null ) {
-					var stateStr;
-					switch (websocket.readyState) {
-						case 0:
-						stateStr = "CONNECTING";
-						break;
-						case 1:
-						stateStr = "OPEN";
-						break;
-						case 2:
-						stateStr = "CLOSING";
-						break;
-						case 3:
-						stateStr = "CLOSED";
-						break;
-						default:
-						stateStr = "UNKNOW";
-						break;
-					}
-					debug("Websocket state = " + websocket.readyState + " ( " + stateStr + " )");
-				} else {
-					debug("Websocket is null");
-				}
-			}
-			
-			//initWebsocket();
-		</script>
-	</body>
+    function debug(message)
+    {
+        debugTextArea.value += message + "\n";
+        debugTextArea.scrollTop = debugTextArea.scrollHeight;
+    }
+
+    function sendMessage()
+    {
+        var pseudo = document.getElementById("inputPseudo").value;
+        var msg = document.getElementById("inputText").value;
+        var strToSend = pseudo + ": " + msg;
+        if ( websocket != null )
+        {
+                document.getElementById("inputText").value = "";
+                websocket.send( strToSend );
+        }
+    }
+
+    var wsUri = "ws://localhost:1234";
+    var websocket = null;
+
+    function initWebsocket()
+    {
+        try {
+                if (typeof MozWebSocket == 'function')
+                        WebSocket = MozWebSocket;
+                websocket = new WebSocket(wsUri);
+                websocket.onopen = function (evt) {
+                        debug("CONNECTED");
+                };
+                websocket.onclose = function (evt) {
+                        debug("DISCONNECTED");
+                };
+                websocket.onmessage = function (evt) {
+                        debug( evt.data );
+                };
+                websocket.onerror = function (evt) {
+                        debug('ERROR: ' + evt.data);
+                };
+        } catch (exception) {
+                debug('ERROR: ' + exception);
+        }
+    }
+
+    function stopWebsocket()
+    {
+        if (websocket)
+                websocket.close();
+    }
+
+    function checkSocket()
+    {
+        if ( websocket != null ) {
+                var stateStr;
+                switch (websocket.readyState) {
+                        case 0:
+                                stateStr = "CONNECTING";
+                                break;
+                        case 1:
+                                stateStr = "OPEN";
+                                break;
+                        case 2:
+                                stateStr = "CLOSING";
+                                break;
+                        case 3:
+                                stateStr = "CLOSED";
+                                break;
+                        default:
+                                stateStr = "UNKNOW";
+                                break;
+                }
+                debug("Websocket state = " + websocket.readyState + " ( " + stateStr + " )");
+        } else {
+                debug("Websocket is null");
+        }
+    }
+
+    function drawEllipse(centerX, centerY, width, height) {
+        context.save();
+        context.beginPath();
+        context.moveTo(centerX, centerY - height/2); // A1
+        context.bezierCurveTo(
+                        centerX + width/2, centerY - height/2, // C1
+                        centerX + width/2, centerY + height/2, // C2
+                        centerX, centerY + height/2); // A2
+
+        context.bezierCurveTo(
+                        centerX - width/2, centerY + height/2, // C3
+                        centerX - width/2, centerY - height/2, // C4
+                        centerX, centerY - height/2); // A1
+
+        context.fillStyle = "red";
+        context.fill();
+        context.closePath();
+        context.restore();
+    }
+
+    function Point(x,y) {
+        this.x = x;
+        this.y = y;
+    }
+
+    function drawImage(sourcePoint, sourceWidth, sourceHeight, destinationPoint, destinationWidth, 
+    destinationHeight ,image) {
+        var  img = new Image();
+        img.onload = function() {
+                context.drawImage(img,sourcePoint.x,sourcePoint.y,sourceWidth,sourceHeight,
+                                destinationPoint.x, destinationPoint.y,destinationWidth,destinationHeight);
+        }
+        img.src = image;
+    }
+
+    function drawLine(point1, point2) {
+        context.save();
+        context.beginPath();
+        context.moveTo(point1.x,point2.y);
+        context.lineTo(point1.x,point2.y);
+        context.closePath();
+        context.stroke();
+        context.restore();
+    }
+
+    function drawPath(path) {
+
+    }
+
+    function drawPoint(point) {
+        context.fillRect(point.x,point.y,1,1);
+        context.fill();
+    }
+
+    function drawPolygon(points) {
+        context.save();
+        context.beginPath();
+        context.moveTo(points[0].x,points[0].y);
+        for(var i = 1; i < array.length; i++) {
+                context.lineTo(array[i].x,array[i].y);
+        }
+        context.fill();
+        context.stroke();
+        context.closePath();
+    }
+
+    function drawRectangle(point,width,height) {
+        context.fillRect(point.x,point.y,width,height);
+        context.strokeRect(point.x,point.y,width,height);
+    }
+
+    function drawText(point,text) {
+        context.fillText(text,point.x,point.y);
+    }
+
+    function addWidget(id,parent,point) {
+      widgets[id] = { 
+		    'parent': parent
+		    'point' : point 
+		    }
+    }
+
+    function removeWidget(id) {
+      delete widgets[id];
+    }
+
+    //initWebsocket();
+    </script>
+  </head>
+  <body onload="initWebsocket()">
+    <p>
+      <button onclick="initWebsocket();">Connect</button> <button onclick=
+      "stopWebsocket();">Disconnect</button> <button onclick=
+      "checkSocket();">State</button>
+    </p>
+    <p>
+      <textarea id="debugTextArea" style="width:400px;height:200px;">
+</textarea>
+    </p>
+    <p>
+      <input type="text" id="inputPseudo" value="pseudo"> <input type="text"
+      id="inputText" onkeydown="if(event.keyCode==13)sendMessage();">
+      <button onclick="sendMessage();">Envoyer</button>
+    </p>Your browser doesn't support canvas.
+  </body>
 </html>
