Test branch & and rebuild src structure

--- a/src/server/index.html
+++ b/src/server/index.html
@@ -8,6 +8,8 @@
     </style>
     <script type="text/javascript">
 
+        // var sessionID
+
         function CreateQt() {
             this.debugTextArea = document.getElementById("debugTextArea");
             this.canvas = document.getElementById("canvas");
