Web rendering fix (now it is working)

--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -17,6 +17,7 @@ function debug(msg) {
 }
 
 var sessionID = '[PUT_SESSION_ID_HERE]';
+var portNumber = [PUT_PORT_NUMBER_HERE];
 
 function WSConnector(uri, options) {
     this.wsUri = uri;
