--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -67,25 +67,32 @@ function QtLogic() {
 QtLogic.prototype = {
     input:function (data) {
         var self = this;
-        $.each(data,function(_,value) {
+        $.each(data, function (_, value) {
             self.singleInput(value);
         });
     },
-    singleInput: function(data){
+    singleInput:function (data) {
         var self = this;
-        if (data.w && data.h) { // has widget data
-            this.widgets[data.id] = { // store
-                w:data.w,
-                h:data.h,
-                x:data.x,
-                y:data.y,
-                name:data.name
-            };
+        switch (data.command) {
+            case "draw":
+                this.drawCommand(data);
+                break;
         }
-        var widget = this.widgets[data.id];
+    },
+
+    drawCommand:function (data) {
+        var widgetData = data.widget;
+        this.widgets[widgetData.id] = { // store
+            w:widgetData.w,
+            h:widgetData.h,
+            x:widgetData.x,
+            y:widgetData.y,
+            name:widgetData.name
+        };
+        var widget = this.widgets[widgetData.id];
         var renders = data.render;
         $.each(renders, function (_, value) {
-            canvasDrawer.draw(value,{x: widget.x, y: widget.y});
+            canvasDrawer.draw(value, {x:widget.x, y:widget.y});
         });
     }
 };
@@ -99,18 +106,20 @@ CanvasDrawer.prototype = {
         var ctx = this.canvas.getContext("2d");
         ctx.save();
         ctx.translate(translation.x, translation.y);
-        if (data.pixmap) {
-            this.drawPixmap(data.pixmap,ctx);
+        switch (data.t) {
+            case "pixmap":
+                this.drawPixmap(data, ctx);
+                break;
         }
         ctx.restore();
 
     },
-    drawPixmap:function (data,ctx) {
+    drawPixmap:function (data, ctx) {
         var img = new Image();
 
         img.src = data.data;
 
-            ctx.drawImage(img,data.x,data.y,data.w,data.h);
+        ctx.drawImage(img, data.x, data.y, data.w, data.h);
     }
 };
 
@@ -297,13 +306,14 @@ function init() {
     wsConnector.init();
 }
 
-$(document).ready(function() {
-init();
+$(document).ready(function () {
+    init();
 })
 
 </script>
 </head>
 <body>
 <canvas id="canvas" width="800" height="600">Your browser doesn't support canvas.</canvas>
+<div class="data"></div>
 </body>
 </html>
