--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -68,7 +68,6 @@ QtLogic.prototype = {
     input:function (data) {
         var self = this;
         $.each(data, function (_, value) {
-            //debug(value);
             self.singleInput(value);
         });
     },
@@ -146,11 +145,11 @@ QtLogic.prototype = {
 function CanvasDrawer(canvasId) {
     this.canvas = document.getElementById(canvasId);
     this.ctx = this.canvas.getContext("2d");
-    ;
 }
 
 CanvasDrawer.prototype = {
     draw:function (data, translation) {
+        //debug(data);
         var ctx = this.ctx;
         ctx.translate(translation.x, translation.y);
         switch (data.t) {
@@ -163,6 +162,11 @@ CanvasDrawer.prototype = {
             case "state":
                 this.drawState(data);
                 break;
+            case "tiledPixmap":
+                this.drawTtiledPixmap(data);
+                break;
+            default:
+                //debug(data);
         }
         ctx.translate(-translation.x, -translation.y);
 
@@ -182,8 +186,21 @@ CanvasDrawer.prototype = {
         var font = data.data.font;
         var pen = data.data.pen;
         var transform = data.data.transform;
-        if(pen) this.setupPen(pen);
-        if(brush) this.setupBrush(brush);
+        if (pen) this.setupPen(pen);
+        if (brush) this.setupBrush(brush);
+    },
+    drawTtiledPixmap:function (data) {
+        var img = new Image();
+        img.src = data.pixmap;
+        var ctx = this.ctx;
+        if(!img.complete) return;
+        //if(data.rect.h !=7 && data.rect.w != 7) return;
+        ctx.save();
+        ctx.rect(data.rect.x, data.rect.y, data.rect.w, data.rect.h);
+        ctx.fillStyle = ctx.createPattern(img, "no-repeat");
+        ctx.fill();
+        ctx.restore();
+
     },
     setupBrush:function (brush) {
         var ctx = this.ctx;
@@ -197,7 +214,7 @@ CanvasDrawer.prototype = {
 
         }
     },
-    setupPen: function(pen) {
+    setupPen:function (pen) {
         var ctx = this.ctx;
         ctx.strokeStyle = pen.color;
         ctx.lineWidth = pen.width;
