--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -80,6 +80,8 @@ QtLogic.prototype = {
             case "addChild":
                 this.addChildCommand(data);
                 break;
+            default:
+                debug(data);
         }
     },
     addChildCommand:function (data) {
@@ -165,7 +167,7 @@ CanvasDrawer.prototype = {
                 this.drawTtiledPixmap(data);
                 break;
             default:
-                //debug(data);
+                debug(data);
         }
         ctx.translate(-translation.x, -translation.y);
 
@@ -217,181 +219,6 @@ CanvasDrawer.prototype = {
 };
 
 
-//function CreateQt() {
-//    this.debugTextArea = document.getElementById("debugTextArea");
-//    this.canvas = document.getElementById("canvas");
-//    console.log(canvas);
-//    this.ctx = canvas.getContext('2d');
-//    this.context = this.ctx;
-//    this.widgets = {}
-//    this.websocket = 1;
-//
-//    this.debug = function (message) {
-//        debugTextArea.value += message + "\n";
-//        debugTextArea.scrollTop = debugTextArea.scrollHeight;
-//    }
-//
-//    this.sendMessage = function () {
-//        var pseudo = document.getElementById("inputPseudo").value;
-//        var msg = document.getElementById("inputText").value;
-//        var strToSend = pseudo + ": " + msg;
-//        if (websocket != null) {
-//            document.getElementById("inputText").value = "";
-//            websocket.send(strToSend);
-//        }
-//    }
-//
-//    this.initWebsocket = function () {
-//        this.wsUri = "ws://localhost:5889";
-//        try {
-//            if (typeof MozWebSocket == 'function')
-//                WebSocket = MozWebSocket;
-//
-//            this.websocket = new WebSocket(this.wsUri);
-//
-//            this.websocket.onopen = function (evt) {
-//
-//                debug("CONNECTED");
-//            };
-//            this.websocket.onclose = function (evt) {
-//                alert('DISCONNECTED');
-//                for (var i in evt)
-//                    alert(i + ': ' + eval('evt.' + i));
-//                debug("DISCONNECTED");
-//            };
-//            this.websocket.onmessage = function (evt) {
-//
-//                debug(evt.data);
-//            };
-//            this.websocket.onerror = function (evt) {
-//                debug('ERROR: ');
-//                debug(evt.data);
-//            };
-//            this.websocket.send(sessionID);
-//
-//        } catch (exception) {
-//            debug('ERROR: ' + exception);
-//        }
-//    }
-//
-//    this.stopWebsocket = function () {
-//        if (websocket)
-//            websocket.close();
-//    }
-//
-//    this.checkSocket = function () {
-//        if (websocket != null) {
-//            var stateStr;
-//            switch (websocket.readyState) {
-//                case 0:
-//                    stateStr = "CONNECTING";
-//                    break;
-//                case 1:
-//                    stateStr = "OPEN";
-//                    break;
-//                case 2:
-//                    stateStr = "CLOSING";
-//                    break;
-//                case 3:
-//                    stateStr = "CLOSED";
-//                    break;
-//                default:
-//                    stateStr = "UNKNOW";
-//                    break;
-//            }
-//            debug("Websocket state = " + websocket.readyState + " ( " + stateStr + " )");
-//        } else {
-//            debug("Websocket is null");
-//        }
-//    }
-//
-//    this.drawEllipse = function (centerX, centerY, width, height) {
-//        context.save();
-//        context.beginPath();
-//        context.moveTo(centerX, centerY - height / 2); // A1
-//        context.bezierCurveTo(
-//                centerX + width / 2, centerY - height / 2, // C1
-//                centerX + width / 2, centerY + height / 2, // C2
-//                centerX, centerY + height / 2); // A2
-//
-//        context.bezierCurveTo(
-//                centerX - width / 2, centerY + height / 2, // C3
-//                centerX - width / 2, centerY - height / 2, // C4
-//                centerX, centerY - height / 2); // A1
-//
-//        context.fillStyle = "red";
-//        context.fill();
-//        context.closePath();
-//        context.restore();
-//    }
-//
-//    this.Point = function (x, y) {
-//        this.x = x;
-//        this.y = y;
-//    }
-//
-//    this.drawImage = function (sourcePoint, sourceWidth, sourceHeight, destinationPoint, destinationWidth, destinationHeight, image) {
-//        var img = new Image();
-//        img.onload = function () {
-//            context.drawImage(img, sourcePoint.x, sourcePoint.y, sourceWidth, sourceHeight,
-//                    destinationPoint.x, destinationPoint.y, destinationWidth, destinationHeight);
-//        }
-//        img.src = image;
-//    }
-//
-//    this.drawLine = function (point1, point2) {
-//        context.save();
-//        context.beginPath();
-//        context.moveTo(point1.x, point2.y);
-//        context.lineTo(point1.x, point2.y);
-//        context.closePath();
-//        context.stroke();
-//        context.restore();
-//    }
-//
-//    this.drawPath = function (path) {
-//
-//    }
-//
-//    this.drawPoint = function (point) {
-//        context.fillRect(point.x, point.y, 1, 1);
-//        context.fill();
-//    }
-//
-//    this.drawPolygon = function (points) {
-//        context.save();
-//        context.beginPath();
-//        context.moveTo(points[0].x, points[0].y);
-//        for (var i = 1; i < array.length; i++) {
-//            context.lineTo(array[i].x, array[i].y);
-//        }
-//        context.fill();
-//        context.stroke();
-//        context.closePath();
-//    }
-//
-//    this.drawRectangle = function (point, width, height) {
-//        context.fillRect(point.x, point.y, width, height);
-//        context.strokeRect(point.x, point.y, width, height);
-//    }
-//
-//    this.drawText = function (point, text) {
-//        context.fillText(text, point.x, point.y);
-//    }
-//
-//    this.addWidget = function (id, parent, point) {
-//        widgets[id] = {
-//            'parent':parent,
-//            'point':point
-//        }
-//    }
-//
-//    this.removeWidget = function (id) {
-//        delete widgets[id];
-//    }
-//}
-
-
 function init() {
     wsConnector = new WSConnector('ws://localhost:' + portNumber);
     qtLogic = new QtLogic();
@@ -400,7 +227,7 @@ function init() {
 }
 
 $(document).ready(function () {
-    init();
+    setTimeout(function(){ init(); }, 1500);
 })
 
 </script>
