--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -158,8 +158,8 @@ CanvasDrawer.prototype = {
         var ctx = this.ctx;
         ctx.translate(translation.x, translation.y);
         switch (data.t) {
-            case "pixmap":
-                this.drawPixmap(data);
+            case "image":
+                this.drawImage(data);
                 break;
             case "rect":
                 this.drawRect(data);
@@ -179,16 +179,25 @@ CanvasDrawer.prototype = {
             case "path":
                 this.drawPath(data);
                 break;
+            case "ellipse":
+                this.drawEllipse(data);
+                break;
+            case "points":
+                this.drawPoints(data);
+                break;
+            case "polygon":
+                this.drawPolygon(data);
+                break;
             default:
                 debug(data);
         }
         ctx.translate(-translation.x, -translation.y);
 
     },
-    drawPixmap:function (data) {
+    drawImage:function (data) {
         var img = new Image();
         img.src = data.data;
-        this.ctx.drawImage(img, data.x, data.y, data.w, data.h);
+        this.ctx.drawImage(img, data.x, data.y);
     },
     drawRect:function (data) {
         this.ctx.lineWidth = 0.2;
@@ -248,6 +257,45 @@ CanvasDrawer.prototype = {
                     }
             }
         });
+        ctx.fill();
+        ctx.stroke();
+    },
+    drawEllipse:function (data) {
+        var ctx = this.ctx;
+        var x = data.x, y = data.y, w = data.w, h = data.h;
+        var kappa = .5522848;
+        var ox = (w / 2) * kappa, // control point offset horizontal
+                oy = (h / 2) * kappa, // control point offset vertical
+                xe = x + w, // x-end
+                ye = y + h, // y-end
+                xm = x + w / 2, // x-middle
+                ym = y + h / 2;       // y-middle
+        ctx.beginPath();
+        ctx.moveTo(x, ym);
+        ctx.bezierCurveTo(x, ym - oy, xm - ox, y, xm, y);
+        ctx.bezierCurveTo(xm + ox, y, xe, ym - oy, xe, ym);
+        ctx.bezierCurveTo(xe, ym + oy, xm + ox, ye, xm, ye);
+        ctx.bezierCurveTo(xm - ox, ye, x, ym + oy, x, ym);
+        ctx.closePath();
+        ctx.fill();
+        ctx.stroke();
+    },
+    drawPoints:function(data) {
+      var ctx = this.ctx;
+        $.each(data, function(_,d) {
+           ctx.strokeRect(d[0],d[1],1,1);
+        });
+    },
+    drawPolygon:function(data){
+        var ctx = this.ctx;
+        $.each(data.data,function(i,d) {
+           if(i == 0) {
+               ctx.moveTo(d[0],d[1]);
+           } else {
+               ctx.lineTo(d[0],d[1]);
+           }
+        });
+        ctx.closePath();
         ctx.fill();
         ctx.stroke();
     },
